fix main box height for overflowing content

--- a/css/presentation.css
+++ b/css/presentation.css
@@ -9,7 +9,7 @@ html, body {
 }
 
 .card-pf.card-pf-view {
-    height: calc(100% - 40px);
+    min-height: calc(100% - 40px);
     display: flex;
     flex-direction: column;
 }
